apps/gotify/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: gotify/server:2.7.3
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
              subPath: gotify
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
