apps/gotify/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gotify-service
spec:
  selector:
    app: gotify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
